Finished commenting Airline Satisfaction
TODO: Spell check, double check of whole notebook

--- a/Airline Satisfaction - Classification.ipynb
+++ b/Airline Satisfaction - Classification.ipynb
@@ -3600,43 +3600,135 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusion|"
+    "Below is the same table from above sorted by the accuracies of the models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style  type=\"text/css\" >\n",
+       "#T_9b4cd_row0_col0,#T_9b4cd_row0_col1,#T_9b4cd_row0_col2,#T_9b4cd_row0_col3,#T_9b4cd_row0_col4,#T_9b4cd_row1_col0,#T_9b4cd_row1_col1,#T_9b4cd_row1_col2,#T_9b4cd_row1_col3,#T_9b4cd_row1_col4,#T_9b4cd_row2_col0,#T_9b4cd_row2_col1,#T_9b4cd_row2_col2,#T_9b4cd_row2_col3,#T_9b4cd_row2_col4,#T_9b4cd_row3_col0,#T_9b4cd_row3_col1,#T_9b4cd_row3_col2,#T_9b4cd_row3_col3,#T_9b4cd_row3_col4,#T_9b4cd_row4_col0,#T_9b4cd_row4_col1,#T_9b4cd_row4_col2,#T_9b4cd_row4_col3,#T_9b4cd_row4_col4,#T_9b4cd_row5_col0,#T_9b4cd_row5_col1,#T_9b4cd_row5_col2,#T_9b4cd_row5_col3,#T_9b4cd_row5_col4,#T_9b4cd_row6_col0,#T_9b4cd_row6_col1,#T_9b4cd_row6_col2,#T_9b4cd_row6_col3,#T_9b4cd_row6_col4,#T_9b4cd_row7_col0,#T_9b4cd_row7_col1,#T_9b4cd_row7_col2,#T_9b4cd_row7_col3,#T_9b4cd_row7_col4,#T_9b4cd_row8_col0,#T_9b4cd_row8_col1,#T_9b4cd_row8_col2,#T_9b4cd_row8_col3,#T_9b4cd_row8_col4,#T_9b4cd_row9_col0,#T_9b4cd_row9_col1,#T_9b4cd_row9_col2,#T_9b4cd_row9_col3,#T_9b4cd_row9_col4{\n",
+       "            text-align:  left;\n",
+       "        }</style><table id=\"T_9b4cd_\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Model</th>        <th class=\"col_heading level0 col1\" >Accuracy</th>        <th class=\"col_heading level0 col2\" >Runtime (Seconds)</th>        <th class=\"col_heading level0 col3\" >PCA Accuracy</th>        <th class=\"col_heading level0 col4\" >PCA Runtime (Seconds)</th>    </tr></thead><tbody>\n",
+       "                <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row0\" class=\"row_heading level0 row0\" >7</th>\n",
+       "                        <td id=\"T_9b4cd_row0_col0\" class=\"data row0 col0\" >Bagging</td>\n",
+       "                        <td id=\"T_9b4cd_row0_col1\" class=\"data row0 col1\" >0.9663535571296581</td>\n",
+       "                        <td id=\"T_9b4cd_row0_col2\" class=\"data row0 col2\" >349.72551941871643</td>\n",
+       "                        <td id=\"T_9b4cd_row0_col3\" class=\"data row0 col3\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row0_col4\" class=\"data row0 col4\" >---</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row1\" class=\"row_heading level0 row1\" >5</th>\n",
+       "                        <td id=\"T_9b4cd_row1_col0\" class=\"data row1 col0\" >XGBoost</td>\n",
+       "                        <td id=\"T_9b4cd_row1_col1\" class=\"data row1 col1\" >0.9655066214967662</td>\n",
+       "                        <td id=\"T_9b4cd_row1_col2\" class=\"data row1 col2\" >3.4800498485565186</td>\n",
+       "                        <td id=\"T_9b4cd_row1_col3\" class=\"data row1 col3\" >0.93032029565753</td>\n",
+       "                        <td id=\"T_9b4cd_row1_col4\" class=\"data row1 col4\" >10.614118337631226</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row2\" class=\"row_heading level0 row2\" >8</th>\n",
+       "                        <td id=\"T_9b4cd_row2_col0\" class=\"data row2 col0\" >Pasting</td>\n",
+       "                        <td id=\"T_9b4cd_row2_col1\" class=\"data row2 col1\" >0.9655066214967662</td>\n",
+       "                        <td id=\"T_9b4cd_row2_col2\" class=\"data row2 col2\" >354.2313771247864</td>\n",
+       "                        <td id=\"T_9b4cd_row2_col3\" class=\"data row2 col3\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row2_col4\" class=\"data row2 col4\" >---</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row3\" class=\"row_heading level0 row3\" >6</th>\n",
+       "                        <td id=\"T_9b4cd_row3_col0\" class=\"data row3 col0\" >Voting</td>\n",
+       "                        <td id=\"T_9b4cd_row3_col1\" class=\"data row3 col1\" >0.9654296273483215</td>\n",
+       "                        <td id=\"T_9b4cd_row3_col2\" class=\"data row3 col2\" >145.2534945011139</td>\n",
+       "                        <td id=\"T_9b4cd_row3_col3\" class=\"data row3 col3\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row3_col4\" class=\"data row3 col4\" >---</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row4\" class=\"row_heading level0 row4\" >9</th>\n",
+       "                        <td id=\"T_9b4cd_row4_col0\" class=\"data row4 col0\" >Stacking</td>\n",
+       "                        <td id=\"T_9b4cd_row4_col1\" class=\"data row4 col1\" >0.9651986449029873</td>\n",
+       "                        <td id=\"T_9b4cd_row4_col2\" class=\"data row4 col2\" >721.8704574108124</td>\n",
+       "                        <td id=\"T_9b4cd_row4_col3\" class=\"data row4 col3\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row4_col4\" class=\"data row4 col4\" >---</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row5\" class=\"row_heading level0 row5\" >3</th>\n",
+       "                        <td id=\"T_9b4cd_row5_col0\" class=\"data row5 col0\" >Random Forests</td>\n",
+       "                        <td id=\"T_9b4cd_row5_col1\" class=\"data row5 col1\" >0.9634277794887589</td>\n",
+       "                        <td id=\"T_9b4cd_row5_col2\" class=\"data row5 col2\" >8.15390658378601</td>\n",
+       "                        <td id=\"T_9b4cd_row5_col3\" class=\"data row5 col3\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row5_col4\" class=\"data row5 col4\" >---</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row6\" class=\"row_heading level0 row6\" >4</th>\n",
+       "                        <td id=\"T_9b4cd_row6_col0\" class=\"data row6 col0\" >AdaBoost</td>\n",
+       "                        <td id=\"T_9b4cd_row6_col1\" class=\"data row6 col1\" >0.9575762242069603</td>\n",
+       "                        <td id=\"T_9b4cd_row6_col2\" class=\"data row6 col2\" >105.77439975738525</td>\n",
+       "                        <td id=\"T_9b4cd_row6_col3\" class=\"data row6 col3\" >0.9141515244841392</td>\n",
+       "                        <td id=\"T_9b4cd_row6_col4\" class=\"data row6 col4\" >300.235942363739</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row7\" class=\"row_heading level0 row7\" >1</th>\n",
+       "                        <td id=\"T_9b4cd_row7_col0\" class=\"data row7 col0\" >KNN</td>\n",
+       "                        <td id=\"T_9b4cd_row7_col1\" class=\"data row7 col1\" >0.9335540498922081</td>\n",
+       "                        <td id=\"T_9b4cd_row7_col2\" class=\"data row7 col2\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row7_col3\" class=\"data row7 col3\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row7_col4\" class=\"data row7 col4\" >---</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row8\" class=\"row_heading level0 row8\" >2</th>\n",
+       "                        <td id=\"T_9b4cd_row8_col0\" class=\"data row8 col0\" >Logistic Regression</td>\n",
+       "                        <td id=\"T_9b4cd_row8_col1\" class=\"data row8 col1\" >0.8728826609177702</td>\n",
+       "                        <td id=\"T_9b4cd_row8_col2\" class=\"data row8 col2\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row8_col3\" class=\"data row8 col3\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row8_col4\" class=\"data row8 col4\" >---</td>\n",
+       "            </tr>\n",
+       "            <tr>\n",
+       "                        <th id=\"T_9b4cd_level0_row9\" class=\"row_heading level0 row9\" >0</th>\n",
+       "                        <td id=\"T_9b4cd_row9_col0\" class=\"data row9 col0\" >Dummy</td>\n",
+       "                        <td id=\"T_9b4cd_row9_col1\" class=\"data row9 col1\" >0.5637511549122267</td>\n",
+       "                        <td id=\"T_9b4cd_row9_col2\" class=\"data row9 col2\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row9_col3\" class=\"data row9 col3\" >---</td>\n",
+       "                        <td id=\"T_9b4cd_row9_col4\" class=\"data row9 col4\" >---</td>\n",
+       "            </tr>\n",
+       "    </tbody></table>"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x121d71db400>"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = results.sort_values(by = 'Accuracy', axis = 0, ascending = False)\n",
+    "resultsView = results.style.set_properties(**{'text-align': 'left'})\n",
+    "resultsView"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Conclusion"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Throughtout the data and the notebook, we have tried to find the best model for our data, with the objectives to optimize accuracy and runtime as best we can. We have tried many models, the results of which are displayed above. Due to the PCA not improving the performance of the models with our objectives in mind, we can conclude that our mid-way conclusion stands, and the best model for us remains the XGBoost without the use of PCA.<br>\n",
+    "\n",
+    "If our objective was to use the most accurate model, with no regard to runtime, the best model would have been undoubtedly the Bagging classifier.<br>\n",
+    "\n",
+    "If our objective was to optimize the data for data size and any combination of accuracy and runtime, extensive calculations and trials with the use of PCA would have had to have been performed."
+   ]
   }
  ],
  "metadata": {
