Cats Vs Dogs pre-processing started

--- a/Cats vs. Dogs.ipynb
+++ b/Cats vs. Dogs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 1,
    "id": "f2c15fc1",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "import os\n",
     "import cv2\n",
     "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -17,12 +18,19 @@
     "from sklearn.decomposition import PCA\n",
     "from xgboost import XGBClassifier\n",
     "import time\n",
-    "from sklearn import metrics"
+    "from sklearn import metrics\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import AdaBoostClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.ensemble import StackingClassifier\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 2,
    "id": "9af6988f",
    "metadata": {},
    "outputs": [
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "id": "55750907",
    "metadata": {},
    "outputs": [
@@ -1060,7 +1068,7 @@
        " ...]"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1071,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 4,
    "id": "b91324bb",
    "metadata": {},
    "outputs": [
@@ -1098,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 5,
    "id": "cfb1e780",
    "metadata": {},
    "outputs": [],
@@ -1108,7 +1116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 6,
    "id": "e4aa664c",
    "metadata": {},
    "outputs": [
@@ -1126,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 7,
    "id": "51b08961",
    "metadata": {},
    "outputs": [
@@ -1162,7 +1170,7 @@
        "array([115, 118, 119, ...,  71,  71,  71], dtype=uint8)"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1180,7 +1188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 8,
    "id": "7a1bb244",
    "metadata": {},
    "outputs": [
@@ -1209,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 9,
    "id": "a9843f30",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 10,
    "id": "7031b057",
    "metadata": {},
    "outputs": [
@@ -1285,7 +1293,7 @@
        "[0 rows x 10000 columns]"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1304,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 13,
    "id": "e1c91505",
    "metadata": {},
    "outputs": [],
@@ -1327,18 +1335,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 14,
    "id": "d08bca25",
    "metadata": {},
    "outputs": [],
    "source": [
+    "start_time = time.time()\n",
+    "\n",
     "dfDogs = toDF (dfDogs, 'dog')\n",
-    "dfCats = toDF (dfCats, 'cat')"
+    "dfCats = toDF (dfCats, 'cat')\n",
+    "\n",
+    "timeDF = time.time() - start_time\n",
+    "print(\"Done in: %s seconds\" % (start_time))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 15,
    "id": "4d2fb878",
    "metadata": {},
    "outputs": [
@@ -1686,7 +1699,7 @@
        "[12500 rows x 10001 columns]"
       ]
      },
-     "execution_count": 180,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1697,7 +1710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 16,
    "id": "b31e3335",
    "metadata": {},
    "outputs": [],
@@ -1710,29 +1723,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
-   "id": "87787e9d",
+   "execution_count": 17,
+   "id": "4f43f180",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 188,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df.isna().sum().sum()"
+    "df.to_csv('df.csv')\n",
+    "#pd.read_csv('df.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "a733a965",
+   "execution_count": 23,
+   "id": "5de566eb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('df.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "217deb59",
    "metadata": {},
    "outputs": [
     {
@@ -2050,43 +2063,73 @@
        "</div>"
       ],
       "text/plain": [
-       "         0    1    2    3    4    5    6    7    8    9  ... 9991 9992 9993  \\\n",
-       "0      119  109  152  160  160  165  130  134  136  124  ...   80   76   77   \n",
-       "1      146  120  124  132  101  105   53   96  112   78  ...  250  255  248   \n",
-       "2      118  109   93   98  101  123  125  116  120  126  ...   95   95   96   \n",
-       "3      185  184  186  183  183  181  182  183  184  185  ...   58   78   84   \n",
-       "4       16    7    7    7   23   52   63   45   77   40  ...  103  107  114   \n",
-       "...    ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   \n",
-       "24995  140  143  142  145  146  147  148  149  148  149  ...  165  166  166   \n",
-       "24996  117   78  102   83  101  113   69   85   86   86  ...   97   77  100   \n",
-       "24997   42   35   47   58   65   46   51   57   58   40  ...  133  130  125   \n",
-       "24998  254  251  245  234  224  207  189  144  112   75  ...  102  107  114   \n",
-       "24999  240  241  243  243  242  243  247  252  247  244  ...  254  254  254   \n",
+       "         0    1    2    3    4    5    6    7    8    9  ...  9991  9992  \\\n",
+       "0      119  109  152  160  160  165  130  134  136  124  ...    80    76   \n",
+       "1      146  120  124  132  101  105   53   96  112   78  ...   250   255   \n",
+       "2      118  109   93   98  101  123  125  116  120  126  ...    95    95   \n",
+       "3      185  184  186  183  183  181  182  183  184  185  ...    58    78   \n",
+       "4       16    7    7    7   23   52   63   45   77   40  ...   103   107   \n",
+       "...    ...  ...  ...  ...  ...  ...  ...  ...  ...  ...  ...   ...   ...   \n",
+       "24995  140  143  142  145  146  147  148  149  148  149  ...   165   166   \n",
+       "24996  117   78  102   83  101  113   69   85   86   86  ...    97    77   \n",
+       "24997   42   35   47   58   65   46   51   57   58   40  ...   133   130   \n",
+       "24998  254  251  245  234  224  207  189  144  112   75  ...   102   107   \n",
+       "24999  240  241  243  243  242  243  247  252  247  244  ...   254   254   \n",
        "\n",
-       "      9994 9995 9996 9997 9998 9999 Dog/Cat  \n",
-       "0       74   70   70   69   88   75       1  \n",
-       "1      246  243  242  240  239  237       1  \n",
-       "2       93   93   94   92   94   94       1  \n",
-       "3       80   59   65   59   69   71       1  \n",
-       "4      109  126  124  123  116  116       1  \n",
-       "...    ...  ...  ...  ...  ...  ...     ...  \n",
-       "24995  167  168  168  168  168  169       0  \n",
-       "24996   84   77   85   93   94   74       0  \n",
-       "24997   70  113  182  127  113  167       0  \n",
-       "24998  111  111  107  116  114  121       0  \n",
-       "24999  254  254  254  254  254  254       0  \n",
+       "       9993  9994  9995  9996  9997  9998  9999  Dog/Cat  \n",
+       "0        77    74    70    70    69    88    75        1  \n",
+       "1       248   246   243   242   240   239   237        1  \n",
+       "2        96    93    93    94    92    94    94        1  \n",
+       "3        84    80    59    65    59    69    71        1  \n",
+       "4       114   109   126   124   123   116   116        1  \n",
+       "...     ...   ...   ...   ...   ...   ...   ...      ...  \n",
+       "24995   166   167   168   168   168   168   169        0  \n",
+       "24996   100    84    77    85    93    94    74        0  \n",
+       "24997   125    70   113   182   127   113   167        0  \n",
+       "24998   114   111   111   107   116   114   121        0  \n",
+       "24999   254   254   254   254   254   254   254        0  \n",
        "\n",
        "[25000 rows x 10001 columns]"
       ]
      },
-     "execution_count": 184,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "df = df.drop(['Unnamed: 0'], axis = 1)\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "87787e9d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isna().sum().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a733a965",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -2098,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 27,
    "id": "57b4e871",
    "metadata": {},
    "outputs": [],
@@ -2109,7 +2152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 28,
    "id": "1a235393",
    "metadata": {},
    "outputs": [
@@ -2470,7 +2513,7 @@
        "[25000 rows x 10000 columns]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2485,40 +2528,123 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 30,
    "id": "efc2631f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(x, y, test_size = 0.1, random_state = 0)"
+    "X_train_Total, X_test_Final, y_train_Total, y_test_Final = train_test_split(x, y, test_size = 0.1, random_state = 0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 31,
+   "id": "1ee4759f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X_train_Total, y_train_Total,\n",
+    "                                                                test_size = 0.1, random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
    "id": "0cb3a6d9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pca = PCA(n_components=0.9)\n",
-    "X_train_Reduced = pca.fit_transform(X_train)\n",
-    "X_test_Reduced = pca.transform(X_test)"
+    "pca = PCA(n_components=0.8)\n",
+    "X_train_Reduced = pd.DataFrame(pca.fit_transform(X_train))\n",
+    "X_test_Reduced = pd.DataFrame(pca.transform(X_test))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": null,
    "id": "dc091eed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train_Reduced = pd.DataFrame(X_train_Reduced)\n",
-    "X_test_Reduced = pd.DataFrame(X_test_Reduced)"
+    "#X_train_Reduced = pd.DataFrame(X_train_Reduced)\n",
+    "#X_test_Reduced = pd.DataFrame(X_test_Reduced)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 33,
+   "id": "bd7ff884",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(20250, 97)"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train_Reduced.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dd041d5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9337af0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_timeRandForests = time.time()\n",
+    "modelRandForests = RandomForestClassifier(n_estimators = 500, n_jobs = -1, random_state = 0)\n",
+    "modelRandForests.fit(X_train_Reduced, y_train)\n",
+    "predictionsRandForests = modelRandForests.predict(X_test_Reduced)\n",
+    "accuracyRandForests = metrics.accuracy_score(y_test, predictionsRandForests)\n",
+    "print(\"Accuracy (Random Forests): \", accuracyRandForests)\n",
+    "timeRandForests = time.time() - start_timeRandForests\n",
+    "print(\"Time taken to achive result: %s seconds\" % (timeRandForests))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "64692f01",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "start_timeAdaBoost = time.time()\n",
+    "modelDecTree = DecisionTreeClassifier(random_state=0, max_depth=2)\n",
+    "modelAdaBoost = AdaBoostClassifier(modelDecTree, n_estimators = 1000, random_state = 0, learning_rate = 1)\n",
+    "modelAdaBoost.fit(X_train_Reduced, y_train)\n",
+    "predictionsAdaBoost = modelAdaBoost.predict(X_test_Reduced)\n",
+    "accuracyAdaBoost = metrics.accuracy_score(y_test, predictionsAdaBoost)\n",
+    "print(\"Accuracy (AdaBoost): \", accuracyAdaBoost)\n",
+    "timeAdaBoost = time.time() - start_timeAdaBoost\n",
+    "print(\"Time taken to achive result: %s seconds\" % (timeAdaBoost))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f46fbc2d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "id": "f7b752b8",
    "metadata": {},
    "outputs": [
@@ -2526,25 +2652,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy (XGBoost):  0.0496\n",
-      "Time taken to achive result: 64.00690126419067 seconds\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\appel\\anaconda3\\lib\\site-packages\\xgboost\\data.py:112: UserWarning: Use subset (sliced data) of np.ndarray is not recommended because it will generate extra copies and increase memory consumption\n",
-      "  warnings.warn(\n"
+      "Accuracy (XGBoost):  0.09866666666666667\n",
+      "Time taken to achive result: 1.8157093524932861 seconds\n"
      ]
     }
    ],
    "source": [
     "start_timeXGBoost = time.time()\n",
-    "#warnings.filterwarnings('ignore')\n",
     "modelXGBoost = XGBClassifier(learning_rate = 1, n_estimators = 50, verbosity = 0, use_label_encoder = False, n_jobs = -1)\n",
-    "modelXGBoost.fit(X_train, y_train)\n",
-    "predictionsXGBoost = modelXGBoost.predict(X_test)\n",
+    "modelXGBoost.fit(X_train_Reduced, y_train)\n",
+    "predictionsXGBoost = modelXGBoost.predict(X_test_Reduced)\n",
     "accuracyXGBoost = metrics.accuracy_score(y_test, predictionsXGBoost)\n",
     "print(\"Accuracy (XGBoost): \", accuracyXGBoost)\n",
     "timeXGBoost = time.time() - start_timeXGBoost\n",
@@ -2561,35 +2678,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": null,
    "id": "5164fe69",
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictionsXGBoost = np.where(predictionsXGBoost == 1, 0, 1)"
+    "predictionsXGBoost = np.where(predictionsXGBoost == 1, 0, 1)\n",
+    "accuracyXGBoost = metrics.accuracy_score(y_test, predictionsXGBoost)\n",
+    "accuracyXGBoost"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": null,
    "id": "abf0c187",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.9504"
-      ]
-     },
-     "execution_count": 225,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "accuracyXGBoost = metrics.accuracy_score(y_test, predictionsXGBoost)\n",
-    "accuracyXGBoost"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
