Tweaks to comments - Airlines

--- a/Airline Satisfaction - Classification.ipynb
+++ b/Airline Satisfaction - Classification.ipynb
@@ -2528,6 +2528,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='ROC'></a>\n",
     "In the following cells, we will plot the ROC curve for the 3 models we have. The ROC curve describes the performance of the model/s according to the confusion matrix. With the changes in thresholds from the default (0.5 in our case), so does change the confusion matrix, and more specifically the ratio between the right and the left columns of it. As one increases, the other decreases. Likewise, when a bottom cell of a certain column increases, so does the other one in the same column. The later relationship is shown plainly as the ROC curve.<br>\n",
     "To plot the curve, we first calculate and save the probabilities of every model we want to present. The probabilities are returned as a 2D array, but we only need a single column. The second column (\"1\") was chosen. we use the metrics.roc_curve() method to return 3 values, the first 2 of which will be used as the x and y axis as their names imply (fpr = false positive rate; trp = true positive rate).<br>\n",
     "The code that comes after is the plotting of the graphs, the naming of axis and the showing of legend."
@@ -2682,6 +2683,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The purpose of the continuation of this notebook is to try and improve the performance of the classifiers from the first semester, using the techniques newly learned and examined. Moreover, a bigger accent will be put on runtime of the models, with a slighly less \"accuracy only\" approach. Naturally, we are not certain that such an improvement can be made, especially with our already high accuracy rate."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
@@ -2720,7 +2728,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As accuracy is currently not our only concern, we want to see the difference that the PCA algorithm makes when using it on this data (PCA explained later). For the purposes of learning and understanding the concepts better, we shall see the difference of accuracy vs. runtime for each model. First, we shall see the results of the models without PCA, then use PCA and run the classifiers again (of course this will not be done in real-life projects). Then, we shall see the differences in performance between the approaches."
+    "As accuracy is currently not our only concern, we want to see the difference that the PCA algorithm makes when using it on this data (PCA explained later). For the purposes of learning and understanding the concepts better, we shall see the difference of accuracy vs. runtime for each model. First, we shall see the results of the models without PCA, then use PCA and run the classifiers again. Then, we shall see the differences in performance between the approaches."
    ]
   },
   {
@@ -2741,7 +2749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For each classifier, we shall plot a confusion matrix and print a classification report in order to better understand the results."
+    "For each classifier, we shall plot a confusion matrix and print a classification report in order to better understand the results (explained in previously in this notebook)."
    ]
   },
   {
@@ -3401,7 +3409,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Below is the ROC Curve for the models that we have tried, but as we can see, this graph does not tell us much, as most of the models overlap and their accuracy is very close to one another. The ROC Curve's \"only concern\" is the accuracy of the model, but we wish to evaluate the best model in terms of effectiveness (accuracy vs. runtime), so the ROC Curve is of limited use."
+    "Below is the ROC Curve for the classifiers that we have tried (ROC curve explained in full in the [first half](#ROC) of this notebook), but as we can see, this graph does not tell us much, as most of the models overlap and their accuracy is very close to one another. The ROC Curve's \"only concern\" is the accuracy of the classifier, but we wish to evaluate the best classifier in terms of effectiveness (accuracy vs. runtime), so the ROC Curve is of limited use."
    ]
   },
   {
